syntax = "proto3";

package dalalstreet.api.actions;

option java_multiple_files=true;

message SendDividendsRequest {
    uint32 stock_id = 1;
    uint64 dividend_amount = 2;
}

message SendDividendsResponse {
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
        MarketClosedError = 2;
        InvalidStockIdError = 3;
    }
    StatusCode status_code = 1;
    string     status_message = 2;
}
